--- a/page3.html
+++ b/page3.html
@@ -173,7 +173,7 @@ div,span,h1,h2,h3,h4,h5,h6,p,blockquote,a,ol,ul,li,figcaption{font: inherit;}sec
     
 
     <div class="mbr-container">
-        <div class="mbr-section-btn align-center"><a class="btn btn-primary display-4" href="https://mobirise.com">Inventory List</a></div>
+        <div class="mbr-section-btn align-center"><a class="btn btn-primary display-4" href="assets/files/Invontory list .pdf">Inventory List</a></div>
     </div>
 </section>
 
