--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@ div,span,h1,h2,h3,h4,h5,h6,p,blockquote,a,ol,ul,li,figcaption{font: inherit;}sec
             <div class="card mbr-col-sm-12 mbr-col-md-6">
                 <div class="card-wrapper">
                     <div class="card-img">
-                        <amp-img src="assets/images/jeremy1-100x123-100x123.png" layout="responsive" width="540" height="540" alt="Mobirise">
+                        <amp-img src="assets/images/jeremey-circle-150x152.png" layout="responsive" width="539.8026315789474" height="547" alt="Mobirise">
                             
                         </amp-img>
                     </div>
