create github pages

--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@ div,span,h1,h2,h3,h4,h5,h6,p,blockquote,a,ol,ul,li,figcaption{font: inherit;}sec
                         <h4 class="card-title mbr-fonts-style align-left mbr-light display-2">
                             Additional Manufacturing Equipment</h4>
                         
-                        <div class="mbr-section-btn align-left"><a class="btn btn-sm btn-secondary display-4" href="https://mobirise.com">
+                        <div class="mbr-section-btn align-left"><a class="btn btn-sm btn-secondary display-4" href="Additional Equipment.html">
                                 LEARN MORE
                             </a></div>
                     </div>
@@ -157,11 +157,9 @@ div,span,h1,h2,h3,h4,h5,h6,p,blockquote,a,ol,ul,li,figcaption{font: inherit;}sec
                         <h4 class="card-title mbr-fonts-style align-left mbr-light display-2">
                             Collaboration, Advice, and Help</h4>
                         
-                        <div class="mbr-section-btn align-left">
-                            <a class="btn btn-sm btn-secondary display-4" href="https://mobirise.com">
+                        <div class="mbr-section-btn align-left"><a class="btn btn-sm btn-secondary display-4" href="page6.html">
                                 LEARN MORE
-                            </a>
-                        </div>
+                            </a></div>
                     </div>
                 </div>
             </div>
