create github pages

--- a/page2.html
+++ b/page2.html
@@ -154,7 +154,7 @@ div,span,h1,h2,h3,h4,h5,h6,p,blockquote,a,ol,ul,li,figcaption{font: inherit;}sec
     
 
     <div class="mbr-container">
-        <div class="mbr-section-btn align-center"><a class="btn btn-primary display-4" href="assets/files/TIES Lab Sheet (website) - Sheet1.pdf">Invetory List Link</a></div>
+        <div class="mbr-section-btn align-center"><a class="btn btn-primary display-4" href="assets/files/Invontory list .pdf">Invetory List Link</a></div>
     </div>
 </section>
 
