create github pages

--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@ div,span,h1,h2,h3,h4,h5,h6,p,blockquote,a,ol,ul,li,figcaption{font: inherit;}sec
     
 
     <div class="mbr-container">
-        <div class="mbr-section-btn align-center"><a class="btn btn-primary display-4" href="https://mobirise.com">Full Invetory List</a></div>
+        <div class="mbr-section-btn align-center"><a class="btn btn-primary display-4" href="assets/files/Invontory list .pdf">Full Invetory List</a></div>
     </div>
 </section>
 
