create github pages

--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@ div,span,h1,h2,h3,h4,h5,h6,p,blockquote,a,ol,ul,li,figcaption{font: inherit;}sec
                     </div>
                     <div class="card-box">
                         <h4 class="card-title mbr-fonts-style align-left mbr-light display-2">Dr. Mehdi Khazaeli&nbsp;</h4>
-                        <p class="mbr-text mbr-fonts-style align-left display-7">Co-Director of TIES Innovation Space<br>209.946.3074<br><a href="mailto:mkhazaeli@pacific.edu">mkhazaeli@pacific.edu&nbsp;</a><br></p>
+                        <p class="mbr-text mbr-fonts-style align-left display-7">Co-Director of TIE Space<br>209.946.3074<br><a href="mailto:mkhazaeli@pacific.edu">mkhazaeli@pacific.edu&nbsp;</a><br></p>
                     </div>
                 </div>
             </div>
@@ -238,7 +238,7 @@ div,span,h1,h2,h3,h4,h5,h6,p,blockquote,a,ol,ul,li,figcaption{font: inherit;}sec
                     </div>
                     <div class="card-box">
                         <h4 class="card-title mbr-fonts-style align-left mbr-light display-2">Dr. Daniel Wadwhani</h4>
-                        <p class="mbr-text mbr-fonts-style align-left display-7">Co-Director of TIES Innovation Space<br>209.946.3003<br><a href="mailto:dwadhwani@pacific.edu" class="text-primary">dwadhwani@pacific.edu</a><br><br></p>
+                        <p class="mbr-text mbr-fonts-style align-left display-7">Co-Director of TIE Space<br>209.946.3003<br><a href="mailto:dwadhwani@pacific.edu" class="text-primary">dwadhwani@pacific.edu</a><br><br></p>
                     </div>
                 </div>
             </div>
