create github pages

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@ div,span,h1,h2,h3,h4,h5,h6,p,blockquote,a,ol,ul,li,figcaption{font: inherit;}sec
             <div class="card mbr-col-sm-12 mbr-col-md-6 mbr-col-lg-4">
                 <div class="card-wrapper">
                     <div class="card-img">
-                        <amp-img src="assets/images/taz-6-angle-main-product-page-480x423.png" layout="responsive" width="349.5035460992908" height="308" alt="Mobirise">
+                        <amp-img src="assets/images/taz-6-angle-main-product-page-1-480x423.png" layout="responsive" width="350.3497536945813" height="302" alt="Mobirise">
                             
                         </amp-img>
                     </div>
@@ -66,7 +66,7 @@ div,span,h1,h2,h3,h4,h5,h6,p,blockquote,a,ol,ul,li,figcaption{font: inherit;}sec
             <div class="card mbr-col-sm-12 mbr-col-md-6 mbr-col-lg-4">
                 <div class="card-wrapper">
                     <div class="card-img">
-                        <amp-img src="assets/images/laguna-cnc-swift-4x4-full-700x700.jpg" layout="responsive" height="350" width="350" alt="Mobirise">
+                        <amp-img src="assets/images/laguna-cnc-swift-4x4-full-2-700x700.jpg" layout="responsive" height="265" width="349.4111969111969" alt="Mobirise">
                             
                         </amp-img>
                     </div>
