--- a/page3.html
+++ b/page3.html
@@ -46,7 +46,7 @@ div,span,h1,h2,h3,h4,h5,h6,p,blockquote,a,ol,ul,li,figcaption{font: inherit;}sec
     <div class="mbr-container">
         <h2 class="mbr-title align-center mbr-fonts-style mbr-bold mbr-white display-2">
             Traditional Manufacturing</h2>
-        <h3 class="mbr-section-subtitle align-center mbr-light  mbr-fonts-style mbr-white display-5">Manufacturing method that uses tools that have been used in industry for decades. Tools that fall under this category include Lathes, Mills, Saws, and other manually operated equipment</h3>
+        <h3 class="mbr-section-subtitle align-center mbr-light  mbr-fonts-style mbr-white display-5">Manufacturing method that uses tools that have been used in industry for decades. Tools that fall under this category include Lathes, Mills, Saws, and other manually controlled equipment</h3>
         
     </div>
 </section>
