create github pages

--- a/page2.html
+++ b/page2.html
@@ -46,7 +46,7 @@ div,span,h1,h2,h3,h4,h5,h6,p,blockquote,a,ol,ul,li,figcaption{font: inherit;}sec
 
     <div class="mbr-container">
         <h2 class="mbr-title align-center mbr-fonts-style mbr-bold mbr-white display-1">
-            Subtractive Manufacturing</h2>
+            Computer Aided Machining&nbsp;</h2>
         <h3 class="mbr-section-subtitle align-center mbr-light  mbr-fonts-style mbr-white display-5">Subtractive manufacturing is a process by which 3D objects are constructed by removing material away from a solid block of material. Subtractive manufacturing can be done by manually cutting the material but is most typically done with a CNC Machines.</h3>
         
     </div>
