create github pages

--- a/page5.html
+++ b/page5.html
@@ -62,7 +62,7 @@ div,span,h1,h2,h3,h4,h5,h6,p,blockquote,a,ol,ul,li,figcaption{font: inherit;}sec
             
             <div class="card mbr-col-sm-12 mbr-col-md-6">
                 <div class="card-wrapper">
-                    <p class="mbr-text mbr-fonts-style align-left mbr-white display-7"><strong>What is Available?</strong><br>In the Work Spaces in the TIES lab, there are a variety of hand tools, glues and adhesives, fasteners, a paint booth, and a variety of computers equipped with software to design toolpaths for the manufacturing equipment inside the lab. To see what is ready to use click on the link below with the overall inventory list.&nbsp;</p>
+                    <p class="mbr-text mbr-fonts-style align-left mbr-white display-7"><strong>What is Available?</strong><br>In the Work Spaces in the TIES lab, there are a variety of hand tools, glues and adhesives, fasteners, a paint booth, and a variety of computers equipped with software to design toolpaths for the manufacturing equipment inside the lab. To see what is ready to use click on the <a href="assets/files/Invontory list .pdf">link</a>.</p>
                 </div>
                 
             </div>
