create github pages

--- a/index.html
+++ b/index.html
@@ -191,8 +191,8 @@ div,span,h1,h2,h3,h4,h5,h6,p,blockquote,a,ol,ul,li,figcaption{font: inherit;}sec
             <div class="card mbr-col-sm-12 mbr-col-md-6">
                 <div class="card-wrapper">
                     <div class="card-img">
-                        <amp-img src="assets/images/jeremey-circle-150x152.png" layout="responsive" width="539.8026315789474" height="547" alt="Mobirise">
-                            
+                        <amp-img src="assets/images/jeremy-hanlon-1080x1623.jpg" layout="responsive" width="540" height="540" alt="Mobirise">
+                            <a href="mailto:jhanlon@pacific.edu"></a>
                         </amp-img>
                     </div>
                     <div class="card-box">
