--- a/index.html
+++ b/index.html
@@ -218,8 +218,8 @@ div,span,h1,h2,h3,h4,h5,h6,p,blockquote,a,ol,ul,li,figcaption{font: inherit;}sec
             <div class="card mbr-col-sm-12 mbr-col-md-6">
                 <div class="card-wrapper">
                     <div class="card-img">
-                        <amp-img src="assets/images/mehdi-khazaeli-236x236.jpg" layout="responsive" width="540" height="540" alt="Mobirise">
-                            
+                        <amp-img src="assets/images/mehdi-khazaeli2-1080x1623.jpg" layout="responsive" width="540" height="540" alt="Mobirise">
+                            <a href="mailto:mkhazaeli@pacific.edu"></a>
                         </amp-img>
                     </div>
                     <div class="card-box">
@@ -232,8 +232,8 @@ div,span,h1,h2,h3,h4,h5,h6,p,blockquote,a,ol,ul,li,figcaption{font: inherit;}sec
             <div class="card mbr-col-sm-12 mbr-col-md-6">
                 <div class="card-wrapper">
                     <div class="card-img">
-                        <amp-img src="assets/images/dan-whadwani-2-236x250.jpg" layout="responsive" height="540" width="540" alt="Mobirise">
-                            
+                        <amp-img src="assets/images/dan-whadwani-1080x1623.jpg" layout="responsive" height="540" width="540" alt="Mobirise">
+                            <a href="mailto:dwadhwani@pacific.edu"></a>
                         </amp-img>
                     </div>
                     <div class="card-box">
