create github pages

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@ div,span,h1,h2,h3,h4,h5,h6,p,blockquote,a,ol,ul,li,figcaption{font: inherit;}sec
             <div class="card mbr-col-sm-12 mbr-col-md-6 mbr-col-lg-4">
                 <div class="card-wrapper">
                     <div class="card-img">
-                        <amp-img src="assets/images/taz-6-angle-main-product-page-1-480x423.png" layout="responsive" width="350.3497536945813" height="302" alt="Mobirise">
+                        <amp-img src="assets/images/taz-6-angle-main-product-page-1-480x423.png" layout="responsive" width="480.28078817733996" height="414" alt="Mobirise">
                             <a href="page1.html"></a>
                         </amp-img>
                     </div>
@@ -66,7 +66,7 @@ div,span,h1,h2,h3,h4,h5,h6,p,blockquote,a,ol,ul,li,figcaption{font: inherit;}sec
             <div class="card mbr-col-sm-12 mbr-col-md-6 mbr-col-lg-4">
                 <div class="card-wrapper">
                     <div class="card-img">
-                        <amp-img src="assets/images/laguna-cnc-swift-4x4-full-2-700x700.jpg" layout="responsive" height="265" width="349.4111969111969" alt="Mobirise">
+                        <amp-img src="assets/images/laguna-cnc-swift-4x4-full-2-700x700.jpg" layout="responsive" height="364" width="479.94594594594594" alt="Mobirise">
                             <a href="page2.html"></a>
                         </amp-img>
                     </div>
@@ -84,7 +84,7 @@ div,span,h1,h2,h3,h4,h5,h6,p,blockquote,a,ol,ul,li,figcaption{font: inherit;}sec
             <div class="card mbr-col-sm-12 mbr-col-md-6 mbr-col-lg-4 last-child">
                 <div class="card-wrapper">
                     <div class="card-img">
-                        <amp-img src="assets/images/img-9274-700x525.jpg" layout="responsive" height="262" width="349.3333333333333" alt="Mobirise">
+                        <amp-img src="assets/images/img-9274-700x525.jpg" layout="responsive" height="360" width="480" alt="Mobirise">
                             <a href="page3.html"></a>
                         </amp-img>
                     </div>
@@ -114,7 +114,7 @@ div,span,h1,h2,h3,h4,h5,h6,p,blockquote,a,ol,ul,li,figcaption{font: inherit;}sec
             <div class="card mbr-col-sm-12 mbr-col-md-6 mbr-col-lg-4">
                 <div class="card-wrapper">
                     <div class="card-img">
-                        <amp-img src="assets/images/img-9273-700x525.jpg" layout="responsive" width="349.3333333333333" height="262" alt="Mobirise">
+                        <amp-img src="assets/images/img-9273-700x525.jpg" layout="responsive" width="480" height="360" alt="Mobirise">
                             <a href="page5.html"></a>
                         </amp-img>
                     </div>
@@ -131,7 +131,7 @@ div,span,h1,h2,h3,h4,h5,h6,p,blockquote,a,ol,ul,li,figcaption{font: inherit;}sec
             <div class="card mbr-col-sm-12 mbr-col-md-6 mbr-col-lg-4">
                 <div class="card-wrapper">
                     <div class="card-img">
-                        <amp-img src="assets/images/shop-tools-700x475.jpg" layout="responsive" height="237" width="349.2631578947368" alt="Mobirise">
+                        <amp-img src="assets/images/shop-tools-700x475.jpg" layout="responsive" height="326" width="480.4210526315789" alt="Mobirise">
                             <a href="Additional Equipment.html"></a>
                         </amp-img>
                     </div>
@@ -149,7 +149,7 @@ div,span,h1,h2,h3,h4,h5,h6,p,blockquote,a,ol,ul,li,figcaption{font: inherit;}sec
             <div class="card mbr-col-sm-12 mbr-col-md-6 mbr-col-lg-4 last-child">
                 <div class="card-wrapper">
                     <div class="card-img">
-                        <amp-img src="assets/images/mbr-700x459.jpg" layout="responsive" height="229" width="349.23747276688454" alt="Mobirise">
+                        <amp-img src="assets/images/mbr-700x459.jpg" layout="responsive" height="315" width="480.39215686274514" alt="Mobirise">
                             <a href="page6.html"></a>
                         </amp-img>
                     </div>
@@ -191,7 +191,7 @@ div,span,h1,h2,h3,h4,h5,h6,p,blockquote,a,ol,ul,li,figcaption{font: inherit;}sec
             <div class="card mbr-col-sm-12 mbr-col-md-6">
                 <div class="card-wrapper">
                     <div class="card-img">
-                        <amp-img src="assets/images/jeremy-hanlon-1080x1623.jpg" layout="responsive" width="540" height="540" alt="Mobirise">
+                        <amp-img src="assets/images/jeremy-hanlon-1080x1623.jpg" layout="responsive" width="480" height="480" alt="Mobirise">
                             <a href="mailto:jhanlon@pacific.edu"></a>
                         </amp-img>
                     </div>
@@ -218,7 +218,7 @@ div,span,h1,h2,h3,h4,h5,h6,p,blockquote,a,ol,ul,li,figcaption{font: inherit;}sec
             <div class="card mbr-col-sm-12 mbr-col-md-6">
                 <div class="card-wrapper">
                     <div class="card-img">
-                        <amp-img src="assets/images/mehdi-khazaeli2-1080x1623.jpg" layout="responsive" width="540" height="540" alt="Mobirise">
+                        <amp-img src="assets/images/mehdi-khazaeli2-1080x1623.jpg" layout="responsive" width="480" height="480" alt="Mobirise">
                             <a href="mailto:mkhazaeli@pacific.edu"></a>
                         </amp-img>
                     </div>
@@ -232,7 +232,7 @@ div,span,h1,h2,h3,h4,h5,h6,p,blockquote,a,ol,ul,li,figcaption{font: inherit;}sec
             <div class="card mbr-col-sm-12 mbr-col-md-6">
                 <div class="card-wrapper">
                     <div class="card-img">
-                        <amp-img src="assets/images/dan-whadwani-1080x1623.jpg" layout="responsive" height="540" width="540" alt="Mobirise">
+                        <amp-img src="assets/images/dan-whadwani-1080x1623.jpg" layout="responsive" height="480" width="480" alt="Mobirise">
                             <a href="mailto:dwadhwani@pacific.edu"></a>
                         </amp-img>
                     </div>
@@ -266,7 +266,7 @@ div,span,h1,h2,h3,h4,h5,h6,p,blockquote,a,ol,ul,li,figcaption{font: inherit;}sec
                 <h2 class="mbr-section-title align-right mbr-fonts-style mbr-bold display-2">
                     Safety and Proficiency Tests</h2>
                 <h3 class="mbr-section-subtitle align-right mbr-fonts-style mbr-light display-7">
-                    Safety and proficiency tests are held every Friday for the first 4 weeks of the semseter. Instructions will be given at 2 pm make sure to be on time. &nbsp;<br><br><a href="assets/files/Yellow%20tag%20tool%20safety%20guidelines.pdf">Yellow Tag Safety Guidelines</a><br><br><a href="assets/files/Red Tag Tool Safety Guidelines.pdf">Red Tag Safety Guidelines</a></h3>
+                    Safety and Proficiency Tests are held every Friday for the first 4 weeks of the semseter. Instructions will be given at 2 pm, Please make sure to be on time. &nbsp;<br><br><a href="assets/files/Yellow%20tag%20tool%20safety%20guidelines.pdf">Yellow Tag Safety Guidelines</a><br><br><a href="assets/files/Red Tag Tool Safety Guidelines.pdf">Red Tag Safety Guidelines</a></h3>
             </div>
             
         </div>
