--- a/page5.html
+++ b/page5.html
@@ -46,7 +46,7 @@ div,span,h1,h2,h3,h4,h5,h6,p,blockquote,a,ol,ul,li,figcaption{font: inherit;}sec
     <div class="container">
         <div class="mbr-row mbr-justify-content-center">
             <div class="mbr-col-sm-12 mbr-col-md-10 mbr-col-lg-8">
-                <h3 class="mbr-fonts-style mbr-section-title mbr-light display-2">TIES Student Work Space</h3>
+                <h3 class="mbr-fonts-style mbr-section-title mbr-light display-2">Student Work Space</h3>
                 <p class="mbr-text mbr-fonts-style display-7"><strong>In the TIES innovation space there is plenty of room in order for students to design, build, and assemble their projects. Students are allowed to come in with a design and use all the basic equipment, like glues and adhesives, to bring their project from concept to tangible object. </strong><br><br></p>
             </div>
         </div>
@@ -69,7 +69,7 @@ div,span,h1,h2,h3,h4,h5,h6,p,blockquote,a,ol,ul,li,figcaption{font: inherit;}sec
             
             <div class="card mbr-col-sm-12 mbr-col-md-6">
                 <div class="card-wrapper">
-                    <p class="mbr-text mbr-fonts-style align-left mbr-white display-7"><strong>Pre Requisites </strong><br>To use the equipment within the student work space category, students must pass a basic shop safety test which can be completed with Jeremy on Fridays at 2:00 pm with the yellow and red tag tool safety test. <br><br></p>
+                    <p class="mbr-text mbr-fonts-style align-left mbr-white display-7"><strong>Pre Requisites </strong><br>To use the equipment within the student work space, Students must pass a Basic Shop Safety Test, which can be completed with Jeremy on Fridays at 2:00 pm.<br><br></p>
                 </div>
                 
             </div>
