create github pages

--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@ div,span,h1,h2,h3,h4,h5,h6,p,blockquote,a,ol,ul,li,figcaption{font: inherit;}sec
                 <h2 class="mbr-section-title align-right mbr-fonts-style mbr-bold display-2">
                     Safety and Proficiency Tests</h2>
                 <h3 class="mbr-section-subtitle align-right mbr-fonts-style mbr-light display-7">
-                    Safety and Proficiency Tests are held every Friday for the first 4 weeks of the semseter. Instructions will be given at 2 pm, Please make sure to be on time. &nbsp;<br><br><a href="assets/files/Yellow%20tag%20tool%20safety%20guidelines.pdf">Yellow Tag Safety Guidelines</a><br><br><a href="assets/files/Red Tag Tool Safety Guidelines.pdf">Red Tag Safety Guidelines</a></h3>
+                    Safety and Proficiency Tests are held every Friday for the first 4 weeks of the semseter. Instructions will be given at 2 pm, Please make sure to be on time. &nbsp;<br><br><a href="assets/files/TIES%20Safety%20Authorization%20Form.pdf">TIES Safety Authorization Form<br></a><br><a href="assets/files/Yellow%20tag%20tool%20safety%20guidelines.pdf">Yellow Tag Safety Guidelines</a><br><br><a href="assets/files/Red Tag Tool Safety Guidelines.pdf">Red Tag Safety Guidelines</a></h3>
             </div>
             
         </div>
