--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@ div,span,h1,h2,h3,h4,h5,h6,p,blockquote,a,ol,ul,li,figcaption{font: inherit;}sec
             <div class="card mbr-col-sm-12 mbr-col-md-6 mbr-col-lg-4">
                 <div class="card-wrapper">
                     <div class="card-img">
-                        <amp-img src="assets/images/taz-6-angle-main-product-page-1-480x423.png" layout="responsive" width="480.28078817733996" height="414" alt="Mobirise">
+                        <amp-img src="assets/images/taz-6-angle-main-product-page-1-480x423.png" layout="responsive" width="350.3497536945813" height="302" alt="Mobirise">
                             <a href="page1.html"></a>
                         </amp-img>
                     </div>
@@ -66,7 +66,7 @@ div,span,h1,h2,h3,h4,h5,h6,p,blockquote,a,ol,ul,li,figcaption{font: inherit;}sec
             <div class="card mbr-col-sm-12 mbr-col-md-6 mbr-col-lg-4">
                 <div class="card-wrapper">
                     <div class="card-img">
-                        <amp-img src="assets/images/laguna-cnc-swift-4x4-full-2-700x700.jpg" layout="responsive" height="364" width="479.94594594594594" alt="Mobirise">
+                        <amp-img src="assets/images/laguna-cnc-swift-4x4-full-2-700x700.jpg" layout="responsive" height="265" width="349.4111969111969" alt="Mobirise">
                             <a href="page2.html"></a>
                         </amp-img>
                     </div>
@@ -84,7 +84,7 @@ div,span,h1,h2,h3,h4,h5,h6,p,blockquote,a,ol,ul,li,figcaption{font: inherit;}sec
             <div class="card mbr-col-sm-12 mbr-col-md-6 mbr-col-lg-4 last-child">
                 <div class="card-wrapper">
                     <div class="card-img">
-                        <amp-img src="assets/images/img-9274-700x525.jpg" layout="responsive" height="360" width="480" alt="Mobirise">
+                        <amp-img src="assets/images/img-9274-700x525.jpg" layout="responsive" height="262" width="349.3333333333333" alt="Mobirise">
                             <a href="page3.html"></a>
                         </amp-img>
                     </div>
@@ -114,7 +114,7 @@ div,span,h1,h2,h3,h4,h5,h6,p,blockquote,a,ol,ul,li,figcaption{font: inherit;}sec
             <div class="card mbr-col-sm-12 mbr-col-md-6 mbr-col-lg-4">
                 <div class="card-wrapper">
                     <div class="card-img">
-                        <amp-img src="assets/images/img-9273-700x525.jpg" layout="responsive" width="480" height="360" alt="Mobirise">
+                        <amp-img src="assets/images/img-9273-700x525.jpg" layout="responsive" width="349.3333333333333" height="262" alt="Mobirise">
                             <a href="page5.html"></a>
                         </amp-img>
                     </div>
@@ -131,7 +131,7 @@ div,span,h1,h2,h3,h4,h5,h6,p,blockquote,a,ol,ul,li,figcaption{font: inherit;}sec
             <div class="card mbr-col-sm-12 mbr-col-md-6 mbr-col-lg-4">
                 <div class="card-wrapper">
                     <div class="card-img">
-                        <amp-img src="assets/images/shop-tools-700x475.jpg" layout="responsive" height="326" width="480.4210526315789" alt="Mobirise">
+                        <amp-img src="assets/images/shop-tools-700x475.jpg" layout="responsive" height="237" width="349.2631578947368" alt="Mobirise">
                             <a href="Additional Equipment.html"></a>
                         </amp-img>
                     </div>
@@ -149,7 +149,7 @@ div,span,h1,h2,h3,h4,h5,h6,p,blockquote,a,ol,ul,li,figcaption{font: inherit;}sec
             <div class="card mbr-col-sm-12 mbr-col-md-6 mbr-col-lg-4 last-child">
                 <div class="card-wrapper">
                     <div class="card-img">
-                        <amp-img src="assets/images/mbr-700x459.jpg" layout="responsive" height="315" width="480.39215686274514" alt="Mobirise">
+                        <amp-img src="assets/images/mbr-700x459.jpg" layout="responsive" height="229" width="349.23747276688454" alt="Mobirise">
                             <a href="page6.html"></a>
                         </amp-img>
                     </div>
@@ -191,7 +191,7 @@ div,span,h1,h2,h3,h4,h5,h6,p,blockquote,a,ol,ul,li,figcaption{font: inherit;}sec
             <div class="card mbr-col-sm-12 mbr-col-md-6">
                 <div class="card-wrapper">
                     <div class="card-img">
-                        <amp-img src="assets/images/jeremy-hanlon-1080x1623.jpg" layout="responsive" width="480" height="480" alt="Mobirise">
+                        <amp-img src="assets/images/jeremy-hanlon-1080x1623.jpg" layout="responsive" width="540" height="540" alt="Mobirise">
                             <a href="mailto:jhanlon@pacific.edu"></a>
                         </amp-img>
                     </div>
@@ -218,7 +218,7 @@ div,span,h1,h2,h3,h4,h5,h6,p,blockquote,a,ol,ul,li,figcaption{font: inherit;}sec
             <div class="card mbr-col-sm-12 mbr-col-md-6">
                 <div class="card-wrapper">
                     <div class="card-img">
-                        <amp-img src="assets/images/mehdi-khazaeli2-1080x1623.jpg" layout="responsive" width="480" height="480" alt="Mobirise">
+                        <amp-img src="assets/images/mehdi-khazaeli2-1080x1623.jpg" layout="responsive" width="540" height="540" alt="Mobirise">
                             <a href="mailto:mkhazaeli@pacific.edu"></a>
                         </amp-img>
                     </div>
@@ -232,7 +232,7 @@ div,span,h1,h2,h3,h4,h5,h6,p,blockquote,a,ol,ul,li,figcaption{font: inherit;}sec
             <div class="card mbr-col-sm-12 mbr-col-md-6">
                 <div class="card-wrapper">
                     <div class="card-img">
-                        <amp-img src="assets/images/dan-whadwani-1080x1623.jpg" layout="responsive" height="480" width="480" alt="Mobirise">
+                        <amp-img src="assets/images/dan-whadwani-1080x1623.jpg" layout="responsive" height="540" width="540" alt="Mobirise">
                             <a href="mailto:dwadhwani@pacific.edu"></a>
                         </amp-img>
                     </div>
@@ -252,7 +252,7 @@ div,span,h1,h2,h3,h4,h5,h6,p,blockquote,a,ol,ul,li,figcaption{font: inherit;}sec
     
 
     <div class="mbr-container">
-        <div class="mbr-section-btn align-center"><a class="btn btn-primary display-4" href="assets/files/Invontory list .pdf">Full Invetory List</a></div>
+        <div class="mbr-section-btn align-center"><a class="btn btn-primary display-4" href="assets/files/Invontory list .pdf">Full Inventory List</a></div>
     </div>
 </section>
 
