create github pages

--- a/page1.html
+++ b/page1.html
@@ -147,7 +147,7 @@ div,span,h1,h2,h3,h4,h5,h6,p,blockquote,a,ol,ul,li,figcaption{font: inherit;}sec
 
     <div class="mbr-container">
         <h2 class="mbr-title align-center mbr-fonts-style mbr-bold mbr-white display-2">Cost Associated with Printers</h2>
-        <h3 class="mbr-section-subtitle align-center mbr-light  mbr-fonts-style mbr-white display-5"><font color="#000000"><em>FDM &nbsp;and SLA prints are charged as the combination of print time and material used at a rate of .00/hr and $0.10/g  (ie. a 6hr print that uses 150g of filament would be charged $21.00).</em></font></h3>
+        <h3 class="mbr-section-subtitle align-center mbr-light  mbr-fonts-style mbr-white display-5"><font color="#000000"><em>Currently there is no direct charge to students to print, if the project is for academic purposes. See Jeremy for further clarification. As a general rule the costs associated with 3 D printing can be generalized to the following. </em></font><br><br><font color="#000000"><em>FDM &nbsp;and SLA prints are charged as the combination of print time and material used at a rate of .00/hr and $0.10/g  (ie. a 6hr print that uses 150g of filament would be charged $21.00).</em></font></h3>
         
     </div>
 </section>
