create github pages

--- a/Additional Equipment.html
+++ b/Additional Equipment.html
@@ -126,7 +126,7 @@ div,span,h1,h2,h3,h4,h5,h6,p,blockquote,a,ol,ul,li,figcaption{font: inherit;}sec
                 <h3 class="mbr-section-subtitle align-right mbr-fonts-style mbr-light display-7">There is other addtional equipment that can be located within the TIES innovation space. In order to see what else TIES has to offer as well as to learn more about the equipment above, please click on the link to the left. The link includes pre-requisites, descriptions, potential functions, and size capabilities.<div><br></div></h3>
             </div>
             <div class="btn-container mbr-col-sm-12 mbr-col-md-6 mbr-col-lg-4">
-                <div class="mbr-section-btn align-center"><a class="btn btn-black-outline display-4" href="assets/files/Invontory list .pdf">Inventory List</a></div>
+                <div class="mbr-section-btn align-center"><a class="btn btn-black-outline display-4" href="assets/files/TIES Inventory list.pdf">Inventory List</a></div>
             </div>
         </div>
     </div>
