--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@ div,span,h1,h2,h3,h4,h5,h6,p,blockquote,a,ol,ul,li,figcaption{font: inherit;}sec
     <div class="container">
         <div class="mbr-row mbr-justify-content-center">
             <div class="mbr-col-sm-12 mbr-col-md-10 mbr-col-lg-8">
-                <h3 class="mbr-fonts-style mbr-section-title mbr-light display-2">Technological and Entrepreneurship Space (TIES)</h3>
+                <h3 class="mbr-fonts-style mbr-section-title mbr-light display-2">Technological and Entrepreneurship Space&nbsp;</h3>
                 <p class="mbr-text mbr-fonts-style display-7">TIES is an innovation maker space that was established in South Campus in 2015 to support the TIE program. Funding from a University SEED grant was provided to install rapid prototyping machines, a CNC mill, laser cutter, and other equipment to support the "making" of prototypes.</p>
             </div>
         </div>
@@ -272,7 +272,7 @@ div,span,h1,h2,h3,h4,h5,h6,p,blockquote,a,ol,ul,li,figcaption{font: inherit;}sec
     
 
     <div class="mbr-container">
-        <div class="mbr-section-btn align-center"><a class="btn btn-primary display-4" href="assets/files/Invontory list .pdf">Full Inventory List</a></div>
+        <div class="mbr-section-btn align-center"><a class="btn btn-primary display-4" href="assets/files/TIES%20Inventory%20list.pdf">Full Inventory List</a></div>
     </div>
 </section>
 
