--- a/page5.html
+++ b/page5.html
@@ -105,7 +105,7 @@ div,span,h1,h2,h3,h4,h5,h6,p,blockquote,a,ol,ul,li,figcaption{font: inherit;}sec
     
 
     <div class="mbr-container">
-        <div class="mbr-section-btn align-center"><a class="btn btn-primary display-4" href="assets/files/Invontory list .pdf">Inventory List&nbsp;</a>
+        <div class="mbr-section-btn align-center"><a class="btn btn-primary display-4" href="assets/files/TIES Inventory list.pdf">Inventory List&nbsp;</a>
             <a class="btn btn-black-outline display-4" href="http://www.pacific.edu/Academics/Schools-and-Colleges/School-of-Engineering-and-Computer-Science/Academics-/TIE-Program-and-Space.html">Virtual Tour</a></div>
     </div>
 </section>
