create github pages

--- a/page2.html
+++ b/page2.html
@@ -124,9 +124,8 @@ div,span,h1,h2,h3,h4,h5,h6,p,blockquote,a,ol,ul,li,figcaption{font: inherit;}sec
                         </amp-img>
                     </div>
                     <div class="card-box">
-                        <h4 class="card-title mbr-fonts-style align-left mbr-light display-2">
-                            Size and Function Capabilities</h4>
-                        <p class="mbr-text mbr-fonts-style align-left display-7">The Nomad 883 Pro has the capability of working with soft materials up to 8 in x 8 in x 3 in at a tolerance of &nbsp; +- 0.0001 in. <br>The Laguna IQ Pro has a capability of working with materials up to 4 ft x 4ft x 6 inches at a tolerance of &nbsp;+- 0.001 in. &nbsp;<br><br></p>
+                        <h4 class="card-title mbr-fonts-style align-left mbr-light display-2">Supported File Formats&nbsp;</h4>
+                        <p class="mbr-text mbr-fonts-style align-left display-7">2-D machining: &nbsp;DXF file. <br>3-D machining: &nbsp;STL file.<br>Both of the above file formats are brought into a CAM software, in the lab, this allows us to program the toolpath for your project. A toolpath tells the machine the shape of your part, how fast, and in what order. After developing the toolpath the CAM software translates your toolpath into G-Code, which is the language that machine tools understand. Bring your file into the lab for assistance with the development of your toolpath.&nbsp;<br><br></p>
                     </div>
                 </div>
             </div>
