--- a/page1.html
+++ b/page1.html
@@ -77,7 +77,7 @@ div,span,h1,h2,h3,h4,h5,h6,p,blockquote,a,ol,ul,li,figcaption{font: inherit;}sec
             <div class="card mbr-col-sm-12 mbr-col-md-6">
                 <div class="card-wrapper">
                     <div class="card-img">
-                        <amp-img src="assets/images/form-labs-730x417.jpg" layout="responsive" width="539.1846522781775" height="308" alt="Mobirise">
+                        <amp-img src="assets/images/form-labs-730x417.jpg" layout="responsive" width="449.9040767386091" height="257" alt="Mobirise">
                             
                         </amp-img>
                     </div>
@@ -93,7 +93,7 @@ div,span,h1,h2,h3,h4,h5,h6,p,blockquote,a,ol,ul,li,figcaption{font: inherit;}sec
             <div class="card mbr-col-sm-12 mbr-col-md-6">
                 <div class="card-wrapper">
                     <div class="card-img">
-                        <amp-img src="assets/images/taz-6-angle-main-product-page-480x423.png" layout="responsive" height="476" width="540.1418439716313" alt="Mobirise">
+                        <amp-img src="assets/images/taz-6-angle-main-product-page-480x423.png" layout="responsive" height="397" width="450.49645390070924" alt="Mobirise">
                             
                         </amp-img>
                     </div>
@@ -101,7 +101,7 @@ div,span,h1,h2,h3,h4,h5,h6,p,blockquote,a,ol,ul,li,figcaption{font: inherit;}sec
                         <h4 class="card-title mbr-fonts-style align-left mbr-light display-2">
                             FDM 3-D Printer</h4>
                         <p class="mbr-text mbr-fonts-style align-left display-7">
-                            Uses an additive method of printing by laying down plastic using an extruder on a cordinante system.&nbsp;This printer is used to create unique parts for students out of a variety of plastics at a drastically shorter time compared to other manufacturing methods.&nbsp;</p>
+                            Uses an additive method of printing by laying down plastic using an extruder on a coordinate system.&nbsp;This printer is used to create unique parts for students out of a variety of plastics at a drastically shorter time compared to other manufacturing methods.&nbsp;</p>
                     </div>
                 </div>
             </div>
