create github pages

--- a/Additional Equipment.html
+++ b/Additional Equipment.html
@@ -48,7 +48,7 @@ div,span,h1,h2,h3,h4,h5,h6,p,blockquote,a,ol,ul,li,figcaption{font: inherit;}sec
             <div class="mbr-col-sm-12 mbr-col-md-6 mbr-col-lg-8">
                 <h2 class="mbr-section-title align-right mbr-fonts-style mbr-bold display-2">
                     What do we mean by additional&nbsp;</h2>
-                <h3 class="mbr-section-subtitle align-right mbr-fonts-style mbr-light display-7">When referring to additional manufacturing equipment, by no means does it mean that the equipment is extra and not essential to the lab. We called it this because it does not accurately fit into any of the other categories where the rest of the manufacturing equipment fall in. Equipment like this includes laser cutters, vaccum formers, and more.&nbsp;<div><br></div><div><br></div></h3>
+                <h3 class="mbr-section-subtitle align-right mbr-fonts-style mbr-light display-7">When referring to additional manufacturing equipment, by no means does it mean that the equipment is extra and not essential to the lab. We called it this because it does not accurately fit into any of the other categories where the rest of the manufacturing equipment fall in. Equipment like this includes laser cutters, vacuum formers, and more.&nbsp;<div><br></div><div><br></div></h3>
             </div>
             
         </div>
@@ -102,7 +102,7 @@ div,span,h1,h2,h3,h4,h5,h6,p,blockquote,a,ol,ul,li,figcaption{font: inherit;}sec
                     <div class="card-box">
                         <h4 class="card-title mbr-fonts-style align-left mbr-light display-2">Injection Molding</h4>
                         <p class="mbr-text mbr-fonts-style align-left display-4">
-                            Material for the part is fed into a heated barrel, mixed, and injected into a mould cavity, where it cools and hardens to the configuration of the cavity
+                            Material for the part is fed into a heated barrel, mixed, and injected into a mold cavity, where it cools and hardens to the configuration of the cavity
                         </p>
                         
                     </div>
@@ -123,7 +123,7 @@ div,span,h1,h2,h3,h4,h5,h6,p,blockquote,a,ol,ul,li,figcaption{font: inherit;}sec
         <div class="mbr-row mbr-justify-content-center">
             <div class="mbr-col-sm-12 mbr-col-md-6 mbr-col-lg-8">
                 <h2 class="mbr-section-title align-right mbr-fonts-style mbr-bold display-2">Learn More</h2>
-                <h3 class="mbr-section-subtitle align-right mbr-fonts-style mbr-light display-7">There is other addtional equipment that can be located within the TIES innovation space. In order to see what else TIES has to offer as well as to learn more about the equipment above, please click on the link to the left. The link includes pre-requisites, descriptions, potential functions, and size capabilities.<div><br></div></h3>
+                <h3 class="mbr-section-subtitle align-right mbr-fonts-style mbr-light display-7">Check out the Inventory List, included is more equipment, pre-requisites for each machine, detailed descriptions of equipment, machine specific functions and much more.&nbsp;<div><br></div></h3>
             </div>
             <div class="btn-container mbr-col-sm-12 mbr-col-md-6 mbr-col-lg-4">
                 <div class="mbr-section-btn align-center"><a class="btn btn-black-outline display-4" href="assets/files/TIES Inventory list.pdf">Inventory List</a></div>
