create github pages

--- a/page6.html
+++ b/page6.html
@@ -46,14 +46,14 @@ div,span,h1,h2,h3,h4,h5,h6,p,blockquote,a,ol,ul,li,figcaption{font: inherit;}sec
     <div class="container">
         <div class="mbr-row mbr-justify-content-center">
             <div class="image-block mbr-col-sm-12 mbr-col-md-6">
-                <amp-img src="assets/images/collaboration-286x176.jpg" layout="responsive" width="539.5" height="332" alt="Mobirise">
+                <amp-img src="assets/images/collaboration-286x176.jpg" layout="responsive" width="450.125" height="277" alt="Mobirise">
                     
                 </amp-img>
             </div>
             <div class="text-block mbr-col-sm-12 mbr-col-md-6">
                 <h3 class="mbr-section-title mbr-fonts-style align-left display-5">Have a Design question?<br>Want to talk about your idea with someone?&nbsp;</h3>
                 <p class="mbr-fonts-style mbr-text align-left display-7">
-                   The TIES lab is intended to be a colaborative environment were students of all majors are encouraged to work together on projects. Come in and work on your project and maybe help someone on theirs at the same time.&nbsp;</p>
+                   The TIES lab is intended to be a collaborative environment were students of all majors are encouraged to work together on projects. Come in and work on your project and maybe help someone on theirs at the same time.&nbsp;</p>
                 
             </div>
         </div>
