create github pages

--- a/index.html
+++ b/index.html
@@ -32,13 +32,13 @@ div,span,h1,h2,h3,h4,h5,h6,p,blockquote,a,ol,ul,li,figcaption{font: inherit;}sec
     <div class="container">
         <div class="mbr-row mbr-justify-content-center">
             <div class="image-block mbr-col-sm-12 mbr-col-md-6">
-                <amp-img src="assets/images/tieslogo-2-1080x1398.jpg" layout="responsive" width="540" height="540" alt="Mobirise">
+                <amp-img src="assets/images/tieslogo-2-1080x1398.jpg" layout="responsive" width="450" height="450" alt="Mobirise">
                     
                 </amp-img>
             </div>
             <div class="text-block mbr-col-sm-12 mbr-col-md-6">
-                <h3 class="mbr-section-title mbr-fonts-style align-left display-1"><strong>TIES Lab</strong></h3>
-                <p class="mbr-fonts-style mbr-text align-left display-2"><strong>PRRC Building in South Campus<br></strong>2:00 pm-5:00 pm  M-F<br> 209.946.3074<br>Shop Supervisor<br>Jeremy Hanlon<br><a href="mailto:jhanlon@pacific.edu">Jhanlon@pacific.edu</a></p>
+                <h3 class="mbr-section-title mbr-fonts-style align-left display-1"><strong>TIES</strong></h3>
+                <p class="mbr-fonts-style mbr-text align-left display-2"><strong>PRRC Building</strong><br><strong>South Campus<br></strong>2:00 pm-5:00 pm  M-F<br> 209.946.3074<br>Shop Supervisor<br>Jeremy Hanlon<br><a href="mailto:jhanlon@pacific.edu">Jhanlon@pacific.edu</a></p>
                 
             </div>
         </div>
@@ -68,7 +68,7 @@ div,span,h1,h2,h3,h4,h5,h6,p,blockquote,a,ol,ul,li,figcaption{font: inherit;}sec
             <div class="card mbr-col-sm-12 mbr-col-md-6 mbr-col-lg-4">
                 <div class="card-wrapper">
                     <div class="card-img">
-                        <amp-img src="assets/images/taz-6-angle-main-product-page-1-480x423.png" layout="responsive" width="350.3497536945813" height="302" alt="Mobirise">
+                        <amp-img src="assets/images/taz-6-angle-main-product-page-1-480x423.png" layout="responsive" width="290.02463054187194" height="250" alt="Mobirise">
                             <a href="page1.html"></a>
                         </amp-img>
                     </div>
@@ -86,7 +86,7 @@ div,span,h1,h2,h3,h4,h5,h6,p,blockquote,a,ol,ul,li,figcaption{font: inherit;}sec
             <div class="card mbr-col-sm-12 mbr-col-md-6 mbr-col-lg-4">
                 <div class="card-wrapper">
                     <div class="card-img">
-                        <amp-img src="assets/images/laguna-cnc-swift-4x4-full-2-700x700.jpg" layout="responsive" height="265" width="349.4111969111969" alt="Mobirise">
+                        <amp-img src="assets/images/laguna-cnc-swift-4x4-full-2-700x700.jpg" layout="responsive" height="220" width="290.07722007722003" alt="Mobirise">
                             <a href="page2.html"></a>
                         </amp-img>
                     </div>
@@ -104,7 +104,7 @@ div,span,h1,h2,h3,h4,h5,h6,p,blockquote,a,ol,ul,li,figcaption{font: inherit;}sec
             <div class="card mbr-col-sm-12 mbr-col-md-6 mbr-col-lg-4 last-child">
                 <div class="card-wrapper">
                     <div class="card-img">
-                        <amp-img src="assets/images/img-9274-700x525.jpg" layout="responsive" height="262" width="349.3333333333333" alt="Mobirise">
+                        <amp-img src="assets/images/img-9274-700x525.jpg" layout="responsive" height="217" width="289.3333333333333" alt="Mobirise">
                             <a href="page3.html"></a>
                         </amp-img>
                     </div>
@@ -134,7 +134,7 @@ div,span,h1,h2,h3,h4,h5,h6,p,blockquote,a,ol,ul,li,figcaption{font: inherit;}sec
             <div class="card mbr-col-sm-12 mbr-col-md-6 mbr-col-lg-4">
                 <div class="card-wrapper">
                     <div class="card-img">
-                        <amp-img src="assets/images/img-9273-700x525.jpg" layout="responsive" width="349.3333333333333" height="262" alt="Mobirise">
+                        <amp-img src="assets/images/img-9273-700x525.jpg" layout="responsive" width="289.3333333333333" height="217" alt="Mobirise">
                             <a href="page5.html"></a>
                         </amp-img>
                     </div>
@@ -151,7 +151,7 @@ div,span,h1,h2,h3,h4,h5,h6,p,blockquote,a,ol,ul,li,figcaption{font: inherit;}sec
             <div class="card mbr-col-sm-12 mbr-col-md-6 mbr-col-lg-4">
                 <div class="card-wrapper">
                     <div class="card-img">
-                        <amp-img src="assets/images/shop-tools-700x475.jpg" layout="responsive" height="237" width="349.2631578947368" alt="Mobirise">
+                        <amp-img src="assets/images/shop-tools-700x475.jpg" layout="responsive" height="197" width="290.3157894736842" alt="Mobirise">
                             <a href="Additional Equipment.html"></a>
                         </amp-img>
                     </div>
@@ -169,7 +169,7 @@ div,span,h1,h2,h3,h4,h5,h6,p,blockquote,a,ol,ul,li,figcaption{font: inherit;}sec
             <div class="card mbr-col-sm-12 mbr-col-md-6 mbr-col-lg-4 last-child">
                 <div class="card-wrapper">
                     <div class="card-img">
-                        <amp-img src="assets/images/mbr-700x459.jpg" layout="responsive" height="229" width="349.23747276688454" alt="Mobirise">
+                        <amp-img src="assets/images/mbr-700x459.jpg" layout="responsive" height="190" width="289.760348583878" alt="Mobirise">
                             <a href="page6.html"></a>
                         </amp-img>
                     </div>
@@ -211,7 +211,7 @@ div,span,h1,h2,h3,h4,h5,h6,p,blockquote,a,ol,ul,li,figcaption{font: inherit;}sec
             <div class="card mbr-col-sm-12 mbr-col-md-6">
                 <div class="card-wrapper">
                     <div class="card-img">
-                        <amp-img src="assets/images/jeremy-hanlon-1080x1623.jpg" layout="responsive" width="540" height="540" alt="Mobirise">
+                        <amp-img src="assets/images/jeremy-hanlon-1080x1623.jpg" layout="responsive" width="450" height="450" alt="Mobirise">
                             <a href="mailto:jhanlon@pacific.edu"></a>
                         </amp-img>
                     </div>
@@ -238,7 +238,7 @@ div,span,h1,h2,h3,h4,h5,h6,p,blockquote,a,ol,ul,li,figcaption{font: inherit;}sec
             <div class="card mbr-col-sm-12 mbr-col-md-6">
                 <div class="card-wrapper">
                     <div class="card-img">
-                        <amp-img src="assets/images/mehdi-khazaeli2-1080x1623.jpg" layout="responsive" width="540" height="540" alt="Mobirise">
+                        <amp-img src="assets/images/mehdi-khazaeli2-1080x1623.jpg" layout="responsive" width="450" height="450" alt="Mobirise">
                             <a href="mailto:mkhazaeli@pacific.edu"></a>
                         </amp-img>
                     </div>
@@ -252,7 +252,7 @@ div,span,h1,h2,h3,h4,h5,h6,p,blockquote,a,ol,ul,li,figcaption{font: inherit;}sec
             <div class="card mbr-col-sm-12 mbr-col-md-6">
                 <div class="card-wrapper">
                     <div class="card-img">
-                        <amp-img src="assets/images/dan-whadwani-1080x1623.jpg" layout="responsive" height="540" width="540" alt="Mobirise">
+                        <amp-img src="assets/images/dan-whadwani-1080x1623.jpg" layout="responsive" height="450" width="450" alt="Mobirise">
                             <a href="mailto:dwadhwani@pacific.edu"></a>
                         </amp-img>
                     </div>
