create github pages

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@ div,span,h1,h2,h3,h4,h5,h6,p,blockquote,a,ol,ul,li,figcaption{font: inherit;}sec
             </div>
             <div class="text-block mbr-col-sm-12 mbr-col-md-6">
                 <h3 class="mbr-section-title mbr-fonts-style align-left display-1"><strong>TIES</strong></h3>
-                <p class="mbr-fonts-style mbr-text align-left display-2"><strong>PRRC Building</strong><br><strong>South Campus<br></strong>2:00 pm-5:00 pm  M-F<br> 209.946.3074<br>Shop Supervisor<br>Jeremy Hanlon<br><a href="mailto:jhanlon@pacific.edu">Jhanlon@pacific.edu</a></p>
+                <p class="mbr-fonts-style mbr-text align-left display-2"><strong>PRRC Building in South Campus<br></strong>2:00 pm-5:00 pm  M-F<br> 209.946.3074<br>Shop Supervisor<br>Jeremy Hanlon<br><a href="mailto:jhanlon@pacific.edu">Jhanlon@pacific.edu</a></p>
                 
             </div>
         </div>
