create github pages

--- a/Additional Equipment.html
+++ b/Additional Equipment.html
@@ -64,13 +64,13 @@ div,span,h1,h2,h3,h4,h5,h6,p,blockquote,a,ol,ul,li,figcaption{font: inherit;}sec
             <div class="card mbr-col-sm-12 mbr-col-md-6 mbr-col-lg-3">
                 <div class="card-wrapper">
                     <div class="card-img">
-                        <amp-img src="assets/images/soldering-268x205.png" layout="responsive" width="210.47804878048782" height="161" alt="Mobirise">
+                        <amp-img src="assets/images/vynil-cutter-420x280.jpg" layout="responsive" width="210" height="140" alt="Mobirise">
                             
                         </amp-img>
                     </div>
                     <div class="card-box">
-                        <h4 class="card-title mbr-fonts-style align-left mbr-light display-2">Soldering Equipment</h4>
-                        <p class="mbr-text mbr-fonts-style align-left display-4">Soldering is a method used to form a secure connection between electrical components. </p>
+                        <h4 class="card-title mbr-fonts-style align-left mbr-light display-2">Vinyl Cutter&nbsp;</h4>
+                        <p class="mbr-text mbr-fonts-style align-left display-4">A blade is used to cut out shapes and letters from sheets of thin self-adhesive plastic called vinyl. Transfer tape is used to relocate the design from the vinyl backing onto your project.&nbsp;<br>Standard colors kept in stock: Red, Blue, Green, Black, White, Purple, and Orange.&nbsp;</p>
                         
                     </div>
                 </div>
