create github pages

--- a/page5.html
+++ b/page5.html
@@ -25,6 +25,20 @@ div,span,h1,h2,h3,h4,h5,h6,p,blockquote,a,ol,ul,li,figcaption{font: inherit;}sec
   
 </head>
 <body>
+
+<!-- Google Analytics -->
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async="" src="https://www.googletagmanager.com/gtag/js?id=UA-118304529-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-118304529-1');
+</script>
+<!-- /Google Analytics -->
+
+
   <section class="header1 cid-qPZ9TSkxYY" id="header1-1t">
 
     
